--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
 <h1>Homepage wooo</h1>
 <a href='/dashboard/artist'>Artists</a>
 <a href='/dashboard/labels'>Labels</a>
+<a href='/dashboard/styles'>Styles</a>
