--- a/views/artists/artistCreate.hbs
+++ b/views/artists/artistCreate.hbs
@@ -1,4 +1,4 @@
-<form action="/dashboard/create" method="post">
+<form action="/dashboard/artist/create" method="post">
 
     <label for="name">the name : </label>
     <input type="text" name="name" id="name" required>
