labels update and tables

--- a/views/artists.hbs
+++ b/views/artists.hbs
@@ -1,6 +1,12 @@
 <a href="/dashboard/artist/create">create Artist</a>
 <table>
     <tbody>
+        <tr>
+        <th>Name</th>
+        <th>Band?</th>
+        <th>Description</th>
+        <th>Picture</th>
+        </tr>
 {{#each artists}}
     <tr>
         <td>{{this.name}}</td>
