--- a/views/labels/labelUpdate.hbs
+++ b/views/labels/labelUpdate.hbs
@@ -9,6 +9,9 @@
     <label for="country">the country : </label>
     <input type="text" name="country" id="country" value="{{label.country}}">
 
+    <label for="street">the street : </label>
+    <input type="text" name="street" id="street" value="{{label.street}}">
+
      <label for="streetNumber">the street Number : </label>
     <input type="number" name="streetNumber" id="streetNumber" value="{{label.streetNumber}}">
 
