upload label logo done

--- a/views/labels.hbs
+++ b/views/labels.hbs
@@ -19,6 +19,7 @@
             <td>{{this.street}}</td>
             <td>{{this.streetNumber}}</td>
             <td>{{this.zipCode}}</td>
+            <td><img src="{{this.logo}}" alt="{{this.name}}" width="150px"></td>
             <td><a href="/dashboard/labels/update/{{this._id}}">Update</a></td>
             <td><a href="/dashboard/labels/delete/{{this._id}}">Delete</a></td>
         </tr>
