--- a/views/labels/labelUpdate.hbs
+++ b/views/labels/labelUpdate.hbs
@@ -18,6 +18,9 @@
     <label for="zipCode">the zipCode : </label>
     <input type="text" name="zipCode" id="zipCode" value="{{label.zipCode}}">
 
+    <label for="logo">the logo : </label>
+    <input type="file" name="logo" id="logo" value="{{label.logo}}">
+
     <button>Modify</button>
 
 </form>
