--- a/views/artists/artistUpdate.hbs
+++ b/views/artists/artistUpdate.hbs
@@ -10,6 +10,9 @@
     <label for="description">the description : </label>
     <input type="text" name="description" id="description" value="{{artist.description}}">
 
+    <label for="picture">the picture : </label>
+    <input type="file" name="picture" id="picture" value="{{label.picture}}">
+    
     <button>Modify</button>
 
 </form>
